Lesson 4 + Roboto-font

--- a/style.css
+++ b/style.css
@@ -1,9 +1,19 @@
+@font-face {
+  font-family: "Roboto";
+  src: url("fonts/Roboto-Regular.woff2") format("woff2"),
+    url("fonts/Roboto-Regular.woff") format("woff"),
+    url("fonts/Roboto-Regular.ttf") format("truetype");
+  font-weight: normal;
+  font-style: normal;
+}
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
+  font-family: "Roboto", sans-serif;
 }
 
 .container {
@@ -47,6 +57,7 @@ body {
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  text-decoration: none;
 }
 
 .header-logo span {
@@ -54,6 +65,7 @@ body {
   font-size: 24px;
   font-weight: 700;
   margin-left: 6px;
+  color: rgb(10, 20, 58);
 }
 
 .header-burger {
@@ -186,10 +198,83 @@ body {
 }
 
 .content-side__title {
-   font-size: 18px;
+  font-size: 18px;
   line-height: 21px;
   margin-top: 0;
   margin-bottom: 23px;
+}
+
+.content-side__list {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  gap: 25px;
+  border-radius: 1px solid rgb(229, 229, 229);
+  padding-bottom: 36px;
+  margin-bottom: 36px;
+}
+
+.content-side__list-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+.content-side__list-item--title {
+  margin-top: 7px;
+  margin-bottom: 5px;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.content-side__list-item--text {
+  font-size: 14px;
+  line-height: 16px;
+  margin: 0;
+}
+
+.content-side__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 4px;
+}
+
+.content-side__footer--item {
+  color: rgba(196, 196, 196, 1);
+  margin: 0;
+  font-size: 14px;
+  line-height: 16px;
+}
+
+.content-product {
+  display: flex;
+  flex-grow: 1;
+}
+
+.content-product__title,
+.content-product__price {
+  font-size: 24px;
+  line-height: 28px;
+  margin-top: 0;
+  margin-bottom: 25px;
+}
+
+.content-product__left {
+  flex-basis: 50%;
+}
+
+.content-product__img {
+  width: 100%;
+}
+
+.content-product__text {
+  font-size: 14px;
+  line-height: 20px;
+}
+
+.content-product__right {
+  flex-basis: 50%;
 }
 
 @media (max-width: 1200px) {
@@ -198,7 +283,6 @@ body {
   }
 
   .content-main__list-item {
-    height: 50px;
     width: calc((100% - 30px) / 2);
   }
 }
@@ -206,10 +290,6 @@ body {
 @media (max-width: 991px) {
   .container {
     max-width: 730px;
-  }
-
-  .content {
-    padding-bottom: 50px;
   }
 
   .content-box {
@@ -223,6 +303,23 @@ body {
   .content-side {
     width: 100%;
     min-width: none;
+  }
+
+  .content-product {
+    flex-direction: column;
+    width: 100%;
+  }
+
+  .content-product__left {
+    border: 1px solid red;
+    flex-basis: 100%;
+    width: 100%;
+  }
+
+  .content-product__right {
+    border: 1px solid red;
+    flex-basis: 100%;
+    width: 100%;
   }
 }
 @media (max-width: 786px) {
@@ -244,7 +341,6 @@ body {
 
   @media (max-width: 480px) {
     .content-main__list-item {
-      height: 50px;
       width: 100%;
     }
   }
